Removed bc security.policy file.

--- a/src/main/jnlp/grisuTemplateTemplate.vm
+++ b/src/main/jnlp/grisuTemplateTemplate.vm
@@ -24,8 +24,7 @@
   <resources>
     <j2se version="1.6+" initial-heap-size="128m" max-heap-size="512m"  /> <!-- define required Java runtime version -->
     $dependencies
-      <extension href="http://grisu.ceres.auckland.ac.nz/bcprov-jdk16.jnlp" />
-    	<property name="java.security.policy" value="http://grisu.ceres.auckland.ac.nz/bcprov.policy"/>
+      <extension href="http://grisu.ceres.auckland.ac.nz/bcprov-jdk16-all.jnlp" />
         	<property name="jnlp.packEnabled" value="true"/>
     	<property name="jnlp.versionEnabled" value="true"/>
     
