Fixed webstart issues with bouncy castle.

--- a/src/main/jnlp/grisuTemplateTemplate.vm
+++ b/src/main/jnlp/grisuTemplateTemplate.vm
@@ -23,10 +23,12 @@
   </security>
   <resources>
     <j2se version="1.6+" initial-heap-size="128m" max-heap-size="512m"  /> <!-- define required Java runtime version -->
+      <property name="disableLoadBouncyCastle" value="true"/>
+      <property name="jnlp.packEnabled" value="true"/>
+      <property name="jnlp.versionEnabled" value="true"/>
+      
     $dependencies
       <extension href="http://grisu.ceres.auckland.ac.nz/bcprov-jdk16-all.jnlp" />
-        	<property name="jnlp.packEnabled" value="true"/>
-    	<property name="jnlp.versionEnabled" value="true"/>
     
   </resources>
   <application-desc main-class="$mainClass"/>
